--- a/First_project/pom.xml
+++ b/First_project/pom.xml
@@ -183,6 +183,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>19</version>
+            <type>pom</type>
+        </dependency>
+
     </dependencies>
 
 </project>
