--- a/First_project/pom.xml
+++ b/First_project/pom.xml
@@ -9,13 +9,14 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>Model</module>
+        <module>ModelProject</module>
         <module>View</module>
     </modules>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <main.class>com.sudoku.view.HelloApplication</main.class>
     </properties>
 
 
@@ -120,7 +121,16 @@
             <version>19</version>
             <type>pom</type>
         </dependency>
-
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>19-ea+7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>19-ea+7</version>
+        </dependency>
     </dependencies>
 
 </project>
