--- a/First_project/ModelProject/pom.xml
+++ b/First_project/ModelProject/pom.xml
@@ -5,7 +5,6 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.sudoku</groupId>
-<<<<<<< HEAD
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
@@ -14,8 +13,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-=======
->>>>>>> 7a747dfae27c99e64036897ca0e29bfbec53252b
     <parent>
         <groupId>org.sudoku</groupId>
         <artifactId>SudokuGameProject</artifactId>
@@ -37,7 +34,7 @@
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>3.1.1</version>
                     <configuration>
-                        <configLocation>Model/checkstyle2022.xml</configLocation>
+                        <configLocation>ModelProject/checkstyle2022.xml</configLocation>
                         <encoding>UTF-8</encoding>
                         <consoleOutput>true</consoleOutput>
                         <failsOnError>true</failsOnError>
@@ -77,7 +74,7 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <configLocation>Model/checkstyle2022.xml</configLocation>
+                    <configLocation>ModelProject/checkstyle2022.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
                     <linkXRef>false</linkXRef>
                 </configuration>
