--- a/First_project/pom.xml
+++ b/First_project/pom.xml
@@ -131,6 +131,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>19-ea+7</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.40.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
